--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Lock">
-
+    tools:context=".LockActivity">
 
     <ImageButton
+        android:id="@+id/cover_image"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
-        android:scaleType="fitXY"
-        android:src="@drawable/abee_ad_1" />
+        android:scaleType="fitXY" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -20,6 +18,7 @@
         android:background="@drawable/top_gradation">
 
         <TextView
+            android:id="@+id/date_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="24dp"
@@ -31,6 +30,7 @@
             android:textSize="17sp" />
 
         <TextView
+            android:id="@+id/time_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="23dp"
@@ -52,6 +52,7 @@
             android:src="@drawable/icon_point" />
 
         <TextView
+            android:id="@+id/point_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/point_image"
@@ -71,16 +72,6 @@
             android:background="@android:color/transparent"
             android:src="@drawable/icon_mission" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/point_image"
-            android:layout_alignStart="@id/point_image"
-            android:layout_alignLeft="@id/point_image"
-            android:text="500"
-            android:textColor="#fff"
-            android:textSize="12sp" />
-
         <ImageView
             android:id="@+id/home_image"
             android:layout_width="20dp"
@@ -90,16 +81,6 @@
             android:layout_toLeftOf="@id/mission_image"
             android:background="@android:color/transparent"
             android:src="@drawable/icon_home" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/point_image"
-            android:layout_alignStart="@id/point_image"
-            android:layout_alignLeft="@id/point_image"
-            android:text="500"
-            android:textColor="#fff"
-            android:textSize="12sp" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -119,11 +100,13 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/link_to_url_image"
                 android:layout_width="36dp"
                 android:layout_height="38dp"
                 android:src="@drawable/icon_bee" />
 
             <TextView
+                android:id="@+id/point_plus_txt"
                 android:layout_width="36dp"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
@@ -133,6 +116,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/drag_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
@@ -143,11 +127,23 @@
                 android:layout_height="20dp"
                 android:src="@drawable/icon_left_arrow" />
 
-            <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:layout_marginLeft="20dp"
-                android:src="@drawable/abee_logo" />
+            <FrameLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/abee_logo"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginLeft="20dp"
+                    android:src="@drawable/abee_logo" />
+
+                <ImageView
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_marginLeft="20dp"
+                    android:src="@drawable/icon_circle_animating" />
+            </FrameLayout>
 
             <ImageView
                 android:layout_width="20dp"
@@ -166,6 +162,7 @@
             android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/locker_image"
                 android:layout_width="36dp"
                 android:layout_height="38dp"
                 android:layout_gravity="center"
@@ -180,5 +177,4 @@
                 android:textSize="20sp" />
         </LinearLayout>
     </RelativeLayout>
-
 </FrameLayout>
