--- a/app/src/main/res/layout/activity_lock_seek.xml
+++ b/app/src/main/res/layout/activity_lock_seek.xml
@@ -103,7 +103,7 @@
                 android:id="@+id/link_to_url_image"
                 android:layout_width="36dp"
                 android:layout_height="38dp"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/icon_bee_low" />
 
             <TextView
                 android:id="@+id/point_plus_txt"
@@ -127,7 +127,7 @@
                 android:layout_height="20dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="150dp"
-                android:src="@drawable/icon_left_arrow" />
+                android:src="@drawable/icon_left_arrow_low" />
 
             <SeekBar
                 android:id="@+id/seekbar"
@@ -147,7 +147,7 @@
                 android:layout_height="20dp"
                 android:layout_gravity="right|center_vertical"
                 android:layout_marginRight="150dp"
-                android:src="@drawable/icon_right_arrow" />
+                android:src="@drawable/icon_right_arrow_low" />
         </FrameLayout>
 
         <LinearLayout
@@ -164,7 +164,7 @@
                 android:layout_width="36dp"
                 android:layout_height="38dp"
                 android:layout_gravity="center"
-                android:src="@mipmap/ic_launcher" />
+                android:src="@drawable/icon_locker" />
 
             <TextView
                 android:layout_width="wrap_content"
