--- a/app/src/main/res/layout/activity_lock_seek.xml
+++ b/app/src/main/res/layout/activity_lock_seek.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LockActivity">
+    tools:context=".activities.LockActivity">
 
     <ImageButton
         android:id="@+id/cover_image"
