--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".activities.Splash">
 
+    <ImageView
+        android:scaleType="fitXY"
+        android:src="@drawable/apploading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 </LinearLayout>
